--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,11 +1,16 @@
 {
-  "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "target": "es2017",
+    "module": "commonjs",
+    "jsx": "react-native",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "strict": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    }
+    "moduleResolution": "node",
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "lib": ["es2017", "dom"]
   },
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": ["src", "App.tsx"],
+  "exclude": ["node_modules"]
 } 
